syntax = "proto3";

package vuong.app.v1.discord;
option java_package = "com.vuong.app.v1.discord";
option java_multiple_files = true;
option java_outer_classname = "MessageProto";

import "common.proto";
import "discord/member.proto";

message GrpcMessage {
  string message_id = 1;
  string content = 2;
  string file_url = 3;
  string channel_id = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
  string deleted_by = 8;
  GrpcMemberProfile author = 9;
}

message GrpcCreateMessageRequest {
  string content = 1;
  string file_url = 2;
  string channel_id = 3;
  string server_id = 4;
  string profile_id = 5;
}

message GrpcCreateMessageResponse {
  string message_id = 1;
}

message GrpcUpdateMessageRequest {
  string message_id = 1;
  string content = 2;
  string profile_id = 3;
  string server_id = 4;
}

message GrpcUpdateMessageResponse {
  string message_id = 1;
}

message GrpcDeleteMessageRequest {
  string message_id = 1;
  string profile_id = 2;
  string server_id = 3;
}

message GrpcDeleteMessageResponse {
  bool deleted = 1;
}

message GrpcGetMessagesByChannelIdRequest {
  string channel_id = 1;
  string server_id = 2;
  string profile_id = 3;
  int32 page_number = 4;
  int32 page_size = 5;
}

message GrpcGetMessagesByChannelIdResponse {
  GrpcMeta meta = 1;
  repeated GrpcMessage content = 2;
}

service MessageService {
  rpc createMessage(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc updateMessage(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc deleteMessage(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc getMessagesByChannelId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
}